--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@libp2p/websockets": "^5.0.0",
     "it-pipe": "^2.0.4",
     "libp2p": "^0.40.0",
+    "minimist": "^1.2.7",
     "uint8arrays": "^4.0.2"
   }
 }
