--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@libp2p/bootstrap": "^5.0.0",
     "@libp2p/mplex": "^7.0.0",
     "@libp2p/websockets": "^5.0.0",
+    "fs-extra": "^10.1.0",
     "it-pipe": "^2.0.4",
     "libp2p": "^0.40.0",
     "minimist": "^1.2.7",
