adds deploy for optimism goerli, must verify manually

--- a/contract/foundry.toml
+++ b/contract/foundry.toml
@@ -5,6 +5,7 @@ libs = ['lib']
 
 [rpc_endpoints]
 goerli = "${GOERLI_RPC_URL}"
+goerli_optimism = "${OPTIMISM_GOERLI_RPC_URL}"
 
 [etherscan]
 goerli = { key = "${ETHERSCAN_API_KEY}" }
