[BE] nit: "~" won't work in nodejs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
 IS_APPLE_CHIP=false
 SEALER_ADDRESS_1=25bd2c1f21c4603355b9456dd97d9d2c098a1d46
 SEALER_ADDRESS_2=40640236ca267cea54e0e545ca2363032a05fc08
-KEYSTORE_DIR=~/.ethereum/snapchain/keystore
+KEYSTORE_DIR=/Users/<your username>/.ethereum/snapchain/keystore
