[BE] add more logic in createComposeFile.js

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "server1": "node -r dotenv/config src/scripts/server1.js '/ip4/127.0.0.1/tcp/8000/ws' '0.0.0.0:50051'",
     "server2": "node -r dotenv/config src/scripts/server2.js '/ip4/127.0.0.1/tcp/8001/ws'",
-    "client1": "node -r dotenv/config src/scripts/client1.js"
+    "client1": "node -r dotenv/config src/scripts/client1.js",
+    "r": "node -r dotenv/config "
   },
   "dependencies": {
     "@chainsafe/libp2p-noise": "^10.0.1",
@@ -22,6 +23,7 @@
     "dotenv": "^16.0.3",
     "fs-extra": "^10.1.0",
     "it-pipe": "^2.0.4",
+    "js-yaml": "^4.1.0",
     "libp2p": "^0.40.0",
     "minimist": "^1.2.7",
     "uint8arrays": "^4.0.2"
