--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@ethersproject/providers": "^5.0.17",
     "@toruslabs/torus-embed": "^1.8.1",
     "@walletconnect/web3-provider": "^1.2.2",
+    "antd": "^4.24.1",
     "authereum": "0.0.4-beta.201",
     "axios": "^0.20.0",
     "bignumber.js": "^8.1.1",
