[BE] p2p: create_chain - part 2
- 5. create the compose file

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,4 @@ SEALER_ADDRESS_2=40640236ca267cea54e0e545ca2363032a05fc08
 KEYSTORE_DIR=/Users/<your username>/.ethereum/snapchain/keystore
 PASSWORD_FILE=/Users/<your username>/.ethereum/snapchain/password.txt
 COMPOSE_TEMPLATE=docker-compose.yml.example
+COMPOSE_TEMPLATE_2=docker-compose.yml.example2
