--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@ethersproject/contracts": "^5.0.8",
     "@ethersproject/hash": "^5.0.9",
     "@ethersproject/providers": "^5.0.17",
+    "@protobuf-ts/plugin": "^2.8.1",
     "@toruslabs/torus-embed": "^1.8.1",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
@@ -23,6 +24,8 @@
     "ethereumjs-util": "^6.1.0",
     "ethers": "^5.0.24",
     "fortmatic": "^0.8.2",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.4.2",
     "noty": "^3.2.0-beta",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
