[BE] try using udp for port mapping

--- a/backend/src/geth/docker-compose.yml.example
+++ b/backend/src/geth/docker-compose.yml.example
@@ -22,7 +22,7 @@ services:
       ]
     ports:
       - '<httpport>:<httpport>'
-      - '<port>:<port>'
+      - '<port>:<port>/udp'
     restart: always
     volumes:
       - '<datadir>:<datadir>'
