--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "fortmatic": "^0.8.2",
     "google-protobuf": "^3.21.2",
     "grpc-web": "^1.4.2",
+    "gsap": "^3.11.3",
     "noty": "^3.2.0-beta",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
